--- a/app/assets/stylesheets/unit_certs.css.scss
+++ b/app/assets/stylesheets/unit_certs.css.scss
@@ -7,3 +7,48 @@
 #myTable td, #myTable th {
   font-size: 10px;
 }
+
+.purple_link {
+  text-decoration: none;
+  color: purple;
+}
+
+.purple_link:visited {
+  text-decoration: none;
+  color: purple;
+}
+
+.blue_link {
+  text-decoration: none;
+  color: blue;
+}
+
+.blue_link:visited {
+  text-decoration: none;
+  color: blue;
+}
+
+
+#blanket {
+height: 100%;
+width: 100%;
+background: #000000;
+position: absolute;
+top: 0;
+left: 0;
+-moz-opacity:0.75;
+-khtml-opacity: 0.75;
+opacity: 0.75;
+filter:alpha(opacity=75);
+}
+
+#popup {
+width:  300px;
+/*height: 300px;*/
+margin: 20px;
+padding: 20px;
+border: 1px solid #000000;
+background: #ffffff;
+position: absolute;
+top: 100px;
+}
