changed Team to Unit

--- a/app/views/avail_dos/index.html.erb
+++ b/app/views/avail_dos/index.html.erb
@@ -16,7 +16,7 @@
           </td>
           <% if current_member.admin? %>
             <td width=20% align=center>
-              <%= link_to("Team DO Schedule", do_assignments_path) %>
+              <%= link_to("Unit DO Schedule", do_assignments_path) %>
             </td>
             <td width=40% align=right>
               <%= link_to('<', member_avail_dos_path(@member.prev_member_id)) %>
