--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -11,7 +11,7 @@
     <div id=x_header>
       <table width=100%>
         <tr>
-          <td align=left><b>Team Roster / Paging</b></td>
+          <td align=left><b>Unit Roster / Paging</b></td>
           <td align=right>
             <%= link_to("Edit My Contact Info", edit_member_path(current_member)) %>
           </td>
