--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,5 @@
 <h2>Message Log</h2>
-(back to <%= link_to("Team Roster", members_path) %>)<p/>
+(back to <%= link_to("Unit Roster", members_path) %>)<p/>
 
 <table border=1>
   <thead>
