--- a/app/views/unit_avail_ops/index.html.erb
+++ b/app/views/unit_avail_ops/index.html.erb
@@ -8,7 +8,7 @@
     <div id=x_header>
       <table width=100%>
         <tr>
-          <td align=left><b>Team Availability</b></td>
+          <td align=left><b>Unit Availability</b></td>
           <td align=center>
             Search: <input name="filter" id="filter-box" value="" maxlength="15" size="15" type="text">
             <input id="filter-clear-button" type="submit" value="Clear"/>
