--- a/app/views/unit_photos/index.html.erb
+++ b/app/views/unit_photos/index.html.erb
@@ -3,7 +3,7 @@
     <div id=x_header>
       <table width=100%>
         <tr>
-          <td align=left><b>Team Photos</b></td>
+          <td align=left><b>Unit Photos</b></td>
           <td align=right>
             <%= link_to("Edit My Photos", edit_member_path(current_member)) %>
           </td>
