--- a/app/views/do_assignments/edit.html.erb
+++ b/app/views/do_assignments/edit.html.erb
@@ -5,7 +5,7 @@
     <div id=x_header>
       <table width=100%>
         <tr>
-          <td align=left><b>Team Duty Officers</b></td>
+          <td align=left><b>Unit Duty Officers</b></td>
           <td align=right>
             <%= link_to("Back", do_assignments_path(@quarter)) %>
           </td>
