--- a/app/views/certs/edit.html.erb
+++ b/app/views/certs/edit.html.erb
@@ -29,7 +29,10 @@
       <%= render :partial => 'form' %>
 
     </div>
-    <div id=x_footer> </div>
+    <div id=x_footer style="font-size: 10px;">
+      <%= raw "<center>Please upload a scanned certificate, OR add a comment.</center>" unless @cert.typ == "ham" %>
+      <%= raw "<center>Please enter the FCC URL to your ham license.</center>" if @cert.typ == "ham" %>
+    </div>
 
   </div>
 </div>
