added sms_email to phone dialog

--- a/app/views/members/_phone_fields.html.erb
+++ b/app/views/members/_phone_fields.html.erb
@@ -6,5 +6,6 @@
   <%= box_link(@xphone, 'phone_box') %>
   <%= f.check_box :pagable, :hidden => true %>
   <%= link_to_remove_field("remove", f) %>
-  <%= f.hidden_field :_destroy %>
+  <%= f.hidden_field :_destroy  %>
+  <%= f.hidden_field :sms_email %>
 </li>
