added descriptive text for sms-email

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -149,4 +149,42 @@
   <p></p>
   <a href="#" onclick="mem_save_phone();">Change</a> |
   <a href="#" onclick="mem_close_popup('#phone_popup');">Cancel</a>
+  <br/><p></p>
+  <div style='padding: 10px; font-size: 10px; background-color: #d3d3d3;'>
+    You must enter an email address to receive SMS pages on this phone.
+    Most mobile carriers have an email/sms gateway with their service.
+    <p></p>
+
+    Here are some sample email addresses for various local carriers.
+    <style type='text/css'>
+      .help_font td {
+        font-size: 8pt;
+        padding:  3px;
+      }
+    </style>
+    <table class="help_font" border=1>
+      <tr>
+        <td>ATT Wireless</td>
+        <td><span class=ten_dig></span>@txt.att.net</td>
+      </tr>
+      <tr>
+        <td>ATT Enterprise Paging</td>
+        <td><span class=ten_dig></span>@page.att.net</td>
+      </tr>
+      <tr>
+        <td>Sprint PCS</td>
+        <td><span class=ten_dig></span>@messaging.sprintpcs.com</td>
+      </tr>
+      <tr>
+        <td>T-Mobile</td>
+        <td><span class=ten_dig></span>@tmomail.net</td>
+      </tr>
+      <tr>
+        <td>Verizon Wireless</td>
+        <td><span class=ten_dig></span>@vtext.com</td>
+      </tr>
+    </table>
+    Contact your carrier if you don't know your address.<br/>
+    For more info, check this <a href="http://en.wikipedia.org/wiki/List_of_SMS_gateways" target="_blank">list of SMS Gateways</a>.
+  </div>
 </div>
