added cert description select (fixed issue #13)

--- a/app/views/certs/new.html.erb
+++ b/app/views/certs/new.html.erb
@@ -4,6 +4,7 @@
 <%= javascript_tag "var MEMBER_ID = #{@member.id};" %>
 <%= javascript_include_tag "jquery-ui.min.js"       %>
 <%= javascript_include_tag "members_autoselect.js"  %>
+<%= javascript_include_tag "certs_form.js"          %>
 
 
 <div id=x_container>
