--- a/app/views/certs/_form.html.erb
+++ b/app/views/certs/_form.html.erb
@@ -1,7 +1,11 @@
 <%= simple_form_for [@member, @cert] do |f| %>
   <%= f.hidden_field :typ         %>
   <%= f.input        :expiration  %>
-  <%= f.input        :description %>
+  <%= f.input        :description, :collection => cert_opts(@cert)%>
+  <div id=new_div class="input select optional">
+    <label></label>
+    <input id=new_input type=text></select>
+  </div>
   <%= f.input        :link        if @cert.typ == "ham"%>
   <%= f.input        :cert        unless @cert.typ == "ham"%>
   <%= f.input        :comment     unless @cert.typ == "ham"%>
