--- a/app/views/unit_avail_ops/index.html.erb
+++ b/app/views/unit_avail_ops/index.html.erb
@@ -23,7 +23,7 @@
     </div>
     <div id=x_single_col>
 
-      <% cache('unit_avail_ops_table') do %>
+      <% cache("unit_avail_ops_table-#{current_member.id}") do %>
 
       <table id="myTable" class="tablesorter">
         <thead>
