--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -24,7 +24,7 @@
     </div>
     <div id=x_single_col>
 
-      <% cache('unit_certs_table') do %>
+      <% cache("unit_certs_table-#{current_member.id}") do %>
         <table id="myTable" class="tablesorter">
           <thead>
           <tr>
