save JS state (fixes issue #28)

--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -1,5 +1,6 @@
 <%= javascript_include_tag "jquery.tablesorter2.js"        %>
 <%= javascript_include_tag "jquery.tablesorter_filter.js"  %>
+<%= javascript_include_tag "json2.js"                      %>
 <%= javascript_include_tag "cookie.js"                     %>
 <%= javascript_include_tag "members.js"                    %>
 <%= javascript_include_tag "unit_certs_table.js"           %>
