--- a/app/views/unit_avail_ops/index.html.erb
+++ b/app/views/unit_avail_ops/index.html.erb
@@ -60,7 +60,16 @@
 
     </div>
     <div id=x_footer  style="font-size: 10pt;">
-      <input type="checkbox" id=rsa_check> Show R, S, A Members
+      <table width=100% style="font-size: 10pt;">
+        <tr>
+          <td width=50%>
+            <a href="#" id=clearsort>Clear Sort Settings</a>
+          </td>
+          <td width=50%>
+            <input type="checkbox" id=rsa_check> Show R, S, A Members
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
