added sms-email validation

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -146,6 +146,7 @@
   <p></p>
   SMS-Email Address:
   <input type="text" id=sms_adr>
+  <span id="inval_msg" style="color: pink;">Invalid Address</span>
   <p></p>
   <a href="#" onclick="mem_save_phone();">Change</a> |
   <a href="#" onclick="mem_close_popup('#phone_popup');">Cancel</a>
