--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -11,7 +11,7 @@
 
 <style>
   #sortable {list-style-type: none; margin: 0; padding: 0;}
-  #sortable li {margin: 0 3px 3px 3px; padding: 4px; }
+  #sortable li {list-style-type: none; margin: 0 3px 3px 3px; padding: 4px; }
 </style>
 
 <div id=x_container>
