--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div id=x_single_col>
 
-      <% cache("unit_certs_table-#{current_member.id}") do %>
+      <% cache("unit_certs_table-#{@fragment_type}") do %>
         <table id="myTable" class="tablesorter">
           <thead>
           <tr>
