added better drag handle

--- a/app/views/avail_dos/index.html.erb
+++ b/app/views/avail_dos/index.html.erb
@@ -26,7 +26,7 @@
             </td>
           <% else %>
             <td width=60% align=right>
-              <%= link_to("Back", do_assignments_path) %>
+              <%= link_to("Unit DO Schedule", do_assignments_path) %>
             </td>
           <% end %>
         </tr>
