--- a/app/views/do_assignments/edit.html.erb
+++ b/app/views/do_assignments/edit.html.erb
@@ -7,7 +7,7 @@
         <tr>
           <td align=left><b>Unit Duty Officers</b></td>
           <td align=right>
-            <%= link_to("Back", do_assignments_path(@quarter)) %>
+            <%= link_to("DO Schedule", do_assignments_path(@quarter)) %>
           </td>
         </tr>
       </table>
