--- a/app/views/files/new.html.erb
+++ b/app/views/files/new.html.erb
@@ -10,7 +10,7 @@
             <b>Upload File</b>
           </td>
           <td align=right>
-            <%= link_to("Back", files_path) %>
+            <%= link_to("BAMRU Files", files_path) %>
           </td>
         </tr>
       </table>
