--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -19,7 +19,7 @@
       <table width=100%>
         <tr>
         <td align=left width=33%><b>Create New Member</b></td>
-        <td align=center width=33%><%= link_to("Back", members_path) %></td>
+        <td align=center width=33%><%= link_to("Unit Roster", members_path) %></td>
         <td align=right width=33%>
           <input size=14 id="autoselect" value="find member...">
         </td>
