--- a/app/views/certs/index.html.erb
+++ b/app/views/certs/index.html.erb
@@ -64,7 +64,15 @@
       <%= raw cert_category("SO Background Certs", @member, :background) %>
 
     </div>
-    <div id=x_footer> </div>
+    <div id=x_footer>
+    <table width=100%>
+      <tr>
+        <td style="font-size: 10px;">Sort certs by dragging the handle <img src="/images/handle.png"> up and down</td>
+        <td style="font-size: 10px;">Top certs are shown on the <%= link_to('Unit Certifications', '/unit_certs') %> page</td>
+      </tr>
+    </table>
+
+    </div>
 
   </div>
 </div>
