--- a/app/views/members/_phone_fields.html.erb
+++ b/app/views/members/_phone_fields.html.erb
@@ -1,5 +1,5 @@
 <li class=fields style="list-style-type: none; <%= check_style(@xphone) %>" id=phone_<%= f.object_id %>>
-  <span class=sort_handle><img src="/images/handle.png" class=handle></span>
+  <span class='sort_handle span_handle'><img src="/images/handle.png" class=handle></span>
   <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_field :number, :size => 10 %>
   <%= f.select :typ, f.object.typ_opts %>
