--- a/app/assets/stylesheets/jquery-ui-1.8.13.custom.css
+++ b/app/assets/stylesheets/jquery-ui-1.8.13.custom.css
@@ -85,6 +85,9 @@
 .ui-priority-secondary, .ui-widget-content .ui-priority-secondary,  .ui-widget-header .ui-priority-secondary { opacity: .7; filter:Alpha(Opacity=70); font-weight: normal; }
 .ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled { opacity: .35; filter:Alpha(Opacity=35); background-image: none; }
 
+.ui-state-highlight {
+    list-style-type: none;
+}
 /* Icons
 ----------------------------------*/
 
